--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,3 +2,9 @@ NotEmpty=el campo es requerido por favor
 NotEmpty.usuario.nombre=el campo nombre es requeridoooooo desde clase val
 NotEmpty.usuario.username=el campo username es àaaaa
 pattern.usuario.identificador=formato equivocado
+UsuarioValidator.usuario.nombre=El nombre debe iniciar con e
+Requerido.usuario.apellido=Apellido requerido con anotaciones
+typeMismatch.java.lang.Integer=Debe ser un entero
+typeMismatch.java.usuario.cuenta=Cuenta ser un entero
+typeMismatch.java.util.Date=Fecha debe ser una fecha
+Future.usuario.fechaNacimiento=Debe ser una fecha a futurooo
